# NN_cpp

./: Activation.cpp  CMakeLists.txt  Matrix.cpp  NeuralNetwork.cpp  README.md  Vector.cpp  WeightMatrix.cpp  layer.cpp  main.cpp
